tests/language_modules/09_statements/valid/check_statement.vf
module CheckStatement

procedure main()
is
    check true
end main

end CheckStatement