tests/language_modules/09_statements/invalid_semantics/while_invariant_requires_boolean.vf
module WhileInvariantRequiresBoolean

procedure main()
is
    let amount: Integer = 1
    while amount > 0
        invariant amount
    do
        amount := amount - 1
    end while
end main

end WhileInvariantRequiresBoolean